# Rasputin-Coder

./: Cargo.toml  LICENSE  README.md  rasputin  run_all_tests.py  test_all_tools.rs
apps/rasputin-tui/: Cargo.toml
apps/rasputin-tui/src/: app.rs  artifact_contract.rs  artifact_contract_validator.rs  autonomy.rs  bootstrap.rs  browser.rs  chain_working_memory.rs  commands.rs  diff.rs  doc_generator.rs  events.rs  forge_runtime.rs  goal_planner.rs  guidance.rs  host_actions.rs  interface_integration.rs  large_prompt_classifier.rs  large_task_decomposer.rs  main.rs  observability.rs  ollama.rs  persistence.rs  repo.rs  state.rs  step_prompt_compactor.rs  supercharged_tools.rs  syntax.rs  text.rs  validation.rs  validation_tests.rs  working_memory.rs
apps/rasputin-tui/src/app/: focus.rs  scroll.rs
apps/rasputin-tui/src/clipboard/: buffer.rs  fallback.rs  mod.rs  system.rs
apps/rasputin-tui/src/ui/: input_box.rs  layout.rs  mod.rs  preview_pane.rs
apps/rasputin-tui/src/ui/widgets/: chat_thread.rs  input_bar.rs  inspector.rs  mod.rs  sidebar.rs  status_bar.rs
benchmark_runs/continuity/20260426T235807Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T000203Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T000316Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T000504Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T000531Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T001108Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T001115Z-planner-stub/: report.json
benchmark_runs/continuity/20260427T001140Z-planner-stub/: report.json
benchmark_runs/live_model/: expanded-repeatability-20260423.md  repeatability-scope-20260423.md
benchmarks/live_model/: README.md  corpus.json
config/ollama/: Modelfile.qwen2.5-coder-14b-base-fp16  Modelfile.qwen2.5-coder-14b-q4km
crates/forge-runtime/: Cargo.toml
crates/rasputin-forge/: Cargo.toml
crates/rasputin-forge/src/: chisel.rs  critic.rs  forge_loop.rs  git.rs  main.rs  ollama.rs  types.rs
crates/rasputin-interface/: Cargo.toml
crates/rasputin-interface/src/: lib.rs
crates/rasputin-interface/src/bridge/: mod.rs  runtime_adapter.rs
crates/rasputin-interface/src/interface/: clarifier.rs  conversation.rs  intent.rs  mod.rs
crates/rasputin-interface/src/orchestrator/: approval.rs  interrupt.rs  loop.rs  mod.rs  session.rs
crates/rasputin-interface/src/transparency/: mapper.rs  mod.rs  policy.rs
crates/rasputin-interface/src/types/: approval.rs  events.rs  intent.rs  mod.rs  session.rs  user.rs
docs/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  03_TECHNOLOGY_STACK.md  04_CORE_CONCEPTS.md  05_FOLDER_STRUCTURE.md  06_MAIN_WORKFLOWS.md  07_API_REFERENCE.md  08_DATA_MODEL.md  09_CONFIGURATION.md  10_DEVELOPMENT_GUIDE.md  11_TESTING_STRATEGY.md  12_DEPLOYMENT_AND_OPERATIONS.md  13_SECURITY_AND_COMPLIANCE.md  14_KNOWN_LIMITATIONS_AND_TRADEOFFS.md  15_FUTURE_ROADMAP_AND_EXTENSIBILITY.md
examples/end_to_end_trace/: README.md  planner_output_iter_0.json  planner_output_iter_1.json  planner_output_iter_2.json  state_view_iter_0.json  trace.jsonl
research/: README.md
research/mockups/: index.html
scripts/: check_warnings.sh  live_model_benchmark.py  stress_test_15_docs_contract.py  stress_test_continuity_chaining.py
support/: install_terminal_profile.py  workspace_config.rs
(+643 files in other folders)
