[workspace]
members = [
    "apps/rasputin-tui",
    "crates/forge-runtime",
    "crates/rasputin-interface",
    "crates/rasputin-forge",
]
default-members = [
    "apps/rasputin-tui",
    "crates/forge-runtime",
    "crates/rasputin-interface",
    "crates/rasputin-forge",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
