[package]
name = "rasputin-tui"
version = "0.1.0"
edition = "2024"
authors = ["Rasputin Contributors"]
description = "Terminal-native Forge orchestration agent"

[dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for Ollama API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"
similar = "2.7"
md5 = "0.7"
blake3 = "1"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-fancy"] }

# Clipboard support
clipboard = "0.5"
strip-ansi-escapes = "0.2"

# Interface layer
rasputin-interface = { path = "../../crates/rasputin-interface" }

[dev-dependencies]
tempfile = "3"
